syntax = "proto3";
package os;

import "protobuf/os/os.proto";

option go_package = "github.com/rickypai/web-template/api/protobuf/os";

service OSWriter {
  rpc CreateOne(CreateOneRequest) returns (CreateOneResponse) {}
}

message CreateOneRequest {
  os.OSRecord request = 1;
}

message CreateOneResponse {
  os.OS result = 1;
}
